--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,17 @@ repositories {
     mavenCentral()
 }
 
+ext.libs = [
+        'lombok' : 'org.projectlombok:lombok:1.18.20'
+]
+
 dependencies {
+    compileOnly libs.lombok
+    annotationProcessor libs.lombok
+    testCompileOnly libs.lombok
+    testAnnotationProcessor libs.lombok
+
+    implementation 'org.slf4j:slf4j-api:1.7.30'
     implementation 'com.google.code.gson:gson:2.8.6'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
